New Commit - updated

--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,46 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<!-- <link rel="manifest" href="./manifest.json" /> -->
+		<!-- <meta name="description" content="Svelte" /> -->
+		<meta name="theme-color" content="#2F3BA2" />
+
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="Svelte" />
+		<!-- <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" /> -->
+
+		<!-- ionic -->
+		<!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+		<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
+		<script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
+		<script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script> -->
+
+		<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons&display=swap" rel="stylesheet" /> -->
+
+		<!-- You can remove this is you don't want to make your PWA installable -->
+		<!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script> -->
+		
+		
 		%svelte.head%
 	</head>
 	<body>
+		<noscript>
+		<div>Oops! Javascript required here! Allow it and try again!</div>
+        </noscript>
+
 		<div id="svelte">%svelte.body%</div>
+		
+	  <!-- <script>
+		if ("serviceWorker" in navigator) {
+		  window.addEventListener("load", () => {
+			navigator.serviceWorker.register("./service-worker.js").then((reg) => {
+			  console.log("Service worker registered.", reg);
+			});
+		  });
+		}
+	  </script> -->
 	</body>
 </html>
